IIWA-21 fixed tab label alignment

--- a/src/frontend-admin/src/components/App/App.module.css
+++ b/src/frontend-admin/src/components/App/App.module.css
@@ -76,12 +76,11 @@
   padding: 0px 35px 5px 35px;
   color: #fff;
   text-decoration:none;
-  font-size: 15px;
-  line-height: 18px;
   background: #333;
   border-radius: 0 18px 0px 0px;
   display: flex;
   z-index: 3;
+  justify-content: center;
 }
 
 .navTab:first-child {
